Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.7 ----------

[w2x] Standard meta data as well as custom meta data can now be edited directly from the EPUB export dialog

[w2x] Revised the internal structure of EPUB files: Text files are named chapter<n>.xhtml, images are placed in the
  subdirectory images and name image<n>, styles are placed in the subdirectory styles and names styles.css (custom
  style sheet) and styles1.css (generated style sheet)

[w2x] Use relative font size is now selected per default in EPUB export dialog

[w2x] Default value of the option formulas changed to image+starmath

[w2x] Default value of the option use_default_font changed to false (was true by mistake)

---------- version 1.1.6 ----------

[all] Changed w2l.bat to use  %~dp0 as suggested by Dave Jarvis (this leaves out any (probably none) win 9x users)

[w2l] Clarified that BibTeX-Writer2LaTeX.js uses GPLv3 license

[w2l] New option include_original_citations (default false). If set to true the original Zotero or JabRef citation text will be
  included as a comment if these citations are converted to LaTeX citations

[w2l] New option use_natbib (default false) to use natbib.sty. This implies that natbib.sty is no longer loaded automatically
  if Zotero or JabRef support is enabled

[w4l] Bibliography options page has been reworked to include JabRef support and unify BibTeX directory (which is now allowed
  to contain special characters like spaces and can be relative to the the document directory)

[w2l] Added support for JabRef reference marks: A new option jabref_bibtex_files has been added to give the names of
  the BibTeX files from JabRef

[w2x] New option include_toc (default true) for EPUB export: If set to false, the table of content will not be exported

[w2x] New option split_after (default 0) for EPUB export: This sets the number of characters (in thousands) after
  which an automatic split will occur (0 means no automatic split)
